# TL-DC

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  all_overall_stats.csv  all_results  all_results_final  all_results_mpz_class_600  all_results_other_pd  all_results_protfolio_600  all_results_td_opt_600  all_results_tw_nauty_600  all_stats.txt  check_graphillion.py  check_networkx.py  generate_csv.py  overall_stats.csv  path_decomp.py  plot.py  read_graph.py  results  results_100  results_final  results_mpz_class_600  results_nauty_600  results_pd_600  results_pd_nauty_600  results_protfolio_600  results_td_100  results_td_600  run.sh  run_all.sh  run_directed.sh  stats.txt  test_small.col
all_pairs/: 000.col  001.col  002.col  003.col  005.col  006.col  007.col  009.col  010.col  015.col  016.col  017.col  018.col  021.col  022.col  024.col  025.col  026.col  027.col  028.col  029.col  030.col  034.col  037.col  038.col  040.col  041.col  043.col  044.col  046.col  047.col  049.col
instances/all_pairs/: 004.col  008.col  011.col  012.col  013.col  014.col  019.col  020.col  023.col  031.col  032.col  033.col  035.col  036.col  039.col  042.col  045.col  048.col
instances/one_pair/: 000.col  002.col  003.col  006.col  009.col  012.col  013.col  015.col  017.col  018.col  027.col  028.col  030.col  032.col  035.col  036.col  039.col  042.col  044.col  046.col  047.col  049.col  050.col  053.col  054.col  061.col  062.col  064.col  066.col  067.col  069.col  070.col  076.col  080.col  081.col  082.col  085.col  096.col  097.col  099.col
one_pair/: 001.col  004.col  005.col  007.col  008.col  010.col  011.col  014.col  016.col  019.col  020.col  021.col  022.col  023.col  024.col  025.col  026.col  029.col  031.col  033.col  034.col  037.col  038.col  040.col  041.col  043.col  045.col  048.col  051.col  052.col  055.col  056.col  057.col  058.col  059.col  060.col  063.col  065.col  068.col  071.col  (+20 more)
results/all_pairs/: all_results_pd_600  all_results_pd_nauty_600  all_results_td_600
results/one_pair/: results_fast_join_600  results_pd_600  results_protfolio_600  results_td_opt_600  results_tw_nauty_600
results/scripts/: run.sh  tree_decomp.py
src/: Decomposer.cpp  Decomposer.hpp  annotated_decomposition.cpp  annotated_decomposition.hpp  base_solver.h  bitset.h  branch_decomposition.cpp  branch_decomposition.hpp  canonizer.cpp  canonizer.h  clhasher.cpp  clhasher.h  count_structures.h  digraph.cpp  digraph.h  graph.cpp  graph.h  logging.h  main.cpp  make_decomposition.h  meet_in_the_middle_directed_search.cpp  meet_in_the_middle_directed_search.h  meet_in_the_middle_search.cpp  meet_in_the_middle_search.h  nauty_pathwidth_search.cpp  nauty_pathwidth_search.h  nauty_treewidth_search.cpp  nauty_treewidth_search.h  parallel_directed_search.cpp  parallel_directed_search.h  parallel_nauty_search.cpp  parallel_nauty_search.h  parallel_search.cpp  parallel_search.h  popen2.cpp  popen2.h  search.cpp  search.h  tree_cache.cpp  tree_cache.hpp  (+8 more)
src/dominators/Dynamic/DSLT/: README.txt  dynslt.cpp  graph0.txt  graph03.txt  graph03d.txt  graph1.txt  graph2.txt  makefile
src/dominators/Static/src/: CMakeLists.txt  DAMexaple.txt  dgraph.cpp  dgraph.h  dgraph_iter.cpp  dgraph_lt.cpp  dgraph_sdom.cpp  dgraph_slt.cpp  dgraph_snca.cpp  dom.cpp  rfw_timer.cpp  rfw_timer.h
src/hicks/: cut.cc
src/nauty2_8_6/: configure  configure.ac  gtnauty.c  gtools.c  gtools.h  makefile  nausparse.c  nausparse.h  nauty.h  nautycliquer.c  nautycliquer.h  traces.c
src/pathwidth/: CMakeLists.txt  heuristics.cpp  heuristics.hpp  path_decomposer.hpp  path_decomposition_main.cpp
unary/: 000.col.lp  001.col.lp  002.col.lp  003.col.lp  004.col.lp  005.col.lp  006.col.lp  007.col.lp  008.col.lp  009.col.lp  010.col.lp  011.col.lp  012.col.lp  013.col.lp  014.col.lp  015.col.lp  016.col.lp  017.col.lp  018.col.lp  019.col.lp  020.col.lp  021.col.lp  022.col.lp  023.col.lp  024.col.lp  025.col.lp  026.col.lp  027.col.lp  028.col.lp  029.col.lp  030.col.lp  031.col.lp  032.col.lp  033.col.lp  034.col.lp  035.col.lp  036.col.lp  037.col.lp  038.col.lp  039.col.lp  (+59 more)
utils/: htd  htd_custom  path_decomp.py  tamaki-heuristic
